{
    "name": "JoystickMovement",
    "maps": [
        {
            "name": "Gameplay",
            "id": "0d113281-310c-4596-a682-84d9354aa97a",
            "actions": [
                {
                    "name": "RightMove",
                    "type": "Button",
                    "id": "57b9a038-e0f7-40b8-b704-e5db06a08af0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left Move",
                    "type": "Button",
                    "id": "0a70b4ee-c007-46a6-b8e3-84239a5348f6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpMove",
                    "type": "Button",
                    "id": "e095e9b7-aa64-42be-9d11-7d75ac25f442",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownMove",
                    "type": "Button",
                    "id": "79130163-453d-41c6-a1de-db40913b9faf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "41f843b7-027b-4f53-8682-5158a31aecf4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "6b398869-3336-4b65-bf6c-3db3b3873533",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e57c1a2-a95e-49fc-9d91-0a2e3248fe3f",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2008b18a-3e67-4798-a78b-7537d3492d96",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43495bf4-f124-4538-8370-a79b419013d7",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e83ef8b7-e294-4a09-9312-2b2e5c0de10b",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d30c2e1-512c-4544-9b2d-59a93fd0ecac",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd1b48a0-bd32-48e8-ab07-67912744e425",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03a5eb2e-0117-4b14-a468-eb9e7bea0ad9",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b3c0bec-f137-4727-ac7e-c9ad192f52e8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}